ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
  labels:
    app: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: turtvaiz/ping-pong:3.2
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-stset
spec:
  serviceName: pg-svc
  replicas: 1
  selector:
    matchLabels:
      app: pg-app
  template:
    metadata:
      labels:
        app: pg-app
    spec:
      containers:
        - name: pg
          image: postgres:alpine
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
